update: endpoint to receive user account information when searching for user id